tests/wsf/fail/slide_positive.wsa
+slide 0
+slide 1
+slide 2
+slide 3
+slide 4
+slide 5
exit
